# shell

./: Cargo.toml  LICENSE  test.toml
command_core/: Cargo.toml
command_core/src/: command_error.rs  command_handler.rs  command_info.rs  lib.rs  parse_argument.rs  registry.rs
command_macro/: Cargo.toml
command_macro/src/: lib.rs
shell/: Cargo.toml
shell/src/: default_commands.rs  file_commands.rs  main.rs
