[package]
name = "shell"
version = "0.1.0"
edition = "2021"

[dependencies]
command_core = { path = "../command_core" }
command_macro = { path = "../command_macro" }
commands = "0.0.5"
linkme = "0.3"
thiserror = "2.0.12"
whoami = "1.6.0"
colored = "3"
enable-ansi-support = "0.2"
windows = "0.61.3"
log = { version = "0.4.27", features = ["std", "serde"] }
env_logger = "0.11.8"
chrono = "0.4"
humansize = "2.1.3"
clearscreen = "4.0.2"
lazy_static = "1.5.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3